[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flopyrw"
description = "Python interface based on FloPy to configure input files for MODPATH-RW"
keywords = ["modpath-rw", "rwpt"]
classifiers = []
requires-python = ">=3.8"
dependencies = [
    "flopy >=3.3.6",
]
dynamic = ["version","readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md", "LICENSE.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["."]
include = ["flopyrw"]
namespaces = false

[project.optional-dependencies]
test = [
    "modflow-devtools",
    "pytest",
    "pytest-dotenv",
    "pytest-xdist",
]
